# epub-translator

./: .gitignore  README.md  pyproject.toml
epub_translator/: __init__.py  cli.py  epub_processor.py  glossary.py  translator.py
tests/: test_epub_processor.py  test_glossary.py
